<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b1b1e"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/label_cont"
            android:textColor="#e6efe9"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/labelCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="1dp"
            android:text="@string/label_cont_num"
            android:textColor="#e6efe9"
            android:textSize="100sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:backgroundTint="#16c172"
                android:text="@string/btn_res"
                android:textColor="#1b1b1e"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#16c172"
                android:text="@string/btn_sum"
                android:textColor="#1b1b1e"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingTop="32sp"
            android:text="@string/label_name"
            android:textColor="#e6efe9"
            android:textSize="24sp" />


        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_user_input"
            android:textColor="#e6efe9"
            android:textColorHint="#7c7c7c"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:backgroundTint="#16c172"
            android:text="@string/btn_ingresar"
            android:textColor="#1b1b1e"
            android:textSize="22sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>